--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "heroku": "^7.63.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19"
   },
   "scripts": {
     "start": "nodemon server.js"
   },
-  "name": "server-bsale-challenge",
+  "name": "server",
   "version": "1.0.0",
   "main": "server.js",
   "keywords": [],
