--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bsale",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/franRappazzini/bsale-challenge/issues"
   },
-  "homepage": "https://github.com/franRappazzini/bsale-challenge#readme"
+  "homepage": "https://github.com/franRappazzini/bsale-challenge#readme",
+  "description": "",
+  "dependencies": {
+    "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
